added a connection to a single game | realtime update doesnt work

--- a/angular.json
+++ b/angular.json
@@ -101,6 +101,23 @@
             ],
             "scripts": []
           }
+        },
+        "deploy": {
+          "builder": "@angular/fire:deploy",
+          "options": {
+            "version": 2
+          },
+          "configurations": {
+            "production": {
+              "buildTarget": "ring-of-fire:build:production",
+              "serveTarget": "ring-of-fire:serve:production"
+            },
+            "development": {
+              "buildTarget": "ring-of-fire:build:development",
+              "serveTarget": "ring-of-fire:serve:development"
+            }
+          },
+          "defaultConfiguration": "production"
         }
       }
     }
